--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="cordova-plugin-restrict-keyboard"
+        id="com.cordova-plugin-restrict-keyboard.peloquin"
         version="1.0">
 
     <name>Restrict Keyboard</name>
